app/main/default/objects/object125__c/fields/testfield109__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield109__c</fullName>
        <description>Test</description>
        <label>testfield109</label>
        <length>42</length>
        <type>Text</type>
    </fields>
</CustomObject>