app/main/default/objects/object125__c/fields/testfield116__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield116__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test</description>
        <label>testfield116</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>object125_testfield116s</relationshipLabel>
        <relationshipName>object125_testfield116s</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>